--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         <button type="button">REMOVE</button>
       </div>
     </form>
+    <script src="script.js"></script>
   </body>
 </html>
