--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <input type="text" name="name" id="name" required />
       </div>
       <div>
-        <button type="button">SAVE</button>
-        <button type="button">REMOVE</button>
+        <button id="save" type="button">SAVE</button>
+        <button id="remove" type="button">REMOVE</button>
       </div>
     </form>
     <script src="script.js"></script>
