Svolto primo esercizio

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Esercizi Web Storage</title>
   </head>
   <body>
-    <form class="form-user">
+    <form id="form-user">
       <div>
         <label for="name">Enter your name: </label>
         <input type="text" name="name" id="name" required />
