--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Esercizi Web Storage</title>
   </head>
   <body>
+    <h3>Username Register</h3>
     <form id="form-user">
       <div>
         <label for="name">Enter your name: </label>
@@ -17,6 +18,10 @@
         <button id="remove" type="button">REMOVE</button>
       </div>
     </form>
+
+    <h3>Timer</h3>
+    <div id="timer"></div>
     <script src="script.js"></script>
+    <script src="timer.js"></script>
   </body>
 </html>
